--- a/day5/docker/8.4/Dockerfile
+++ b/day5/docker/8.4/Dockerfile
@@ -9,6 +9,8 @@ RUN apt-get update && apt-get install -y \
     git \
     curl \
     libzip-dev \
-    && docker-php-ext-install pdo pdo_mysql zip
+    && docker-php-ext-install pdo pdo_mysql zip\
+    && pecl install redis \
+    && docker-php-ext-enable redis
 
 WORKDIR /var/www/html
