modified:   day5/compose.yaml 	new file:   day8/.editorconfig 	new file:   day8/.env.example 	new file:   day8/.gitattributes 	new file:   day8/.gitignore 	new file:   day8/README.md 	new file:   day8/app/Http/Controllers/AuthController.php 	new file:   day8/app/Http/Controllers/Controller.php 	new file:   day8/app/Http/Controllers/EmailVerificationController.php 	new file:   day8/app/Http/Controllers/ForgotPasswordController.php 	new file:   day8/app/Http/Controllers/LoanController.php 	new file:   day8/app/Http/Requests/StoreLoanRequest.php 	new file:   day8/app/Http/Requests/UpdateLoanRequest.php 	new file:   day8/app/Http/Resources/LoanCollection.php 	new file:   day8/app/Http/Resources/LoanResource.php 	new file:   day8/app/Jobs/SendResetOTPJob.php 	new file:   day8/app/Mail/SendResetOTP.php 	new file:   day8/app/Models/Loan.php 	new file:   day8/app/Models/PasswordResetTokens.php 	new file:   day8/app/Models/User.php 	new file:   day8/app/Notifications/VerifyEmailQueued.php 	new file:   day8/app/Policies/LoanPolicy.php 	new file:   day8/app/Providers/AppServiceProvider.php 	new file:   day8/artisan 	new file:   day8/bootstrap/app.php 	new file:   day8/bootstrap/cache/packages.php 	new file:   day8/bootstrap/cache/services.php 	new file:   day8/bootstrap/providers.php 	new file:   day8/compose.yaml 	new file:   day8/composer.json 	new file:   day8/composer.lock 	new file:   day8/config/app.php 	new file:   day8/config/auth.php 	new file:   day8/config/cache.php 	new file:   day8/config/database.php 	new file:   day8/config/filesystems.php 	new file:   day8/config/logging.php 	new file:   day8/config/mail.php 	new file:   day8/config/queue.php 	new file:   day8/config/sanctum.php 	new file:   day8/config/services.php 	new file:   day8/config/session.php 	new file:   day8/database/.gitignore 	new file:   day8/database/factories/LoanFactory.php 	new file:   day8/database/factories/UserFactory.php 	new file:   day8/database/migrations/0001_01_01_000000_create_users

--- a/day5/compose.yaml
+++ b/day5/compose.yaml
@@ -79,7 +79,7 @@ services:
     volumes:
       - ".:/var/www/html"
     depends_on:
-      - quickfund_database
+      - mysql
       - redis
     command: >
       sh -c "
