--- a/day5/compose.yaml
+++ b/day5/compose.yaml
@@ -21,7 +21,7 @@ services:
       LARAVEL_WEBSOCKETS_PORT: 8080
 
       DB_CONNECTION: ${DB_CONNECTION}
-      DB_HOST: mysql
+      DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       DB_DATABASE: ${DB_DATABASE}
       DB_USERNAME: ${DB_USERNAME}
@@ -79,7 +79,7 @@ services:
     volumes:
       - ".:/var/www/html"
     depends_on:
-      - quickfund_database
+      - mysql
       - redis
     command: >
       sh -c "
