--- a/day5/docker/8.4/Dockerfile
+++ b/day5/docker/8.4/Dockerfile
@@ -1,5 +1,9 @@
 FROM laravelsail/php83-composer:latest
 
+# Create sail user if missing
+RUN addgroup --gid 1000 sail \
+    && adduser --uid 1000 --gid 1000 --disabled-password --gecos "" sail
+
 RUN apt-get update && apt-get install -y \
     libpng-dev \
     libonig-dev \
@@ -9,7 +13,7 @@ RUN apt-get update && apt-get install -y \
     git \
     curl \
     libzip-dev \
-    && docker-php-ext-install pdo pdo_mysql zip\
+    && docker-php-ext-install pdo pdo_mysql zip \
     && pecl install redis \
     && docker-php-ext-enable redis
 
